# DI-Container

./: Autofac-main-functionality.md  CMakeLists.txt  DI-Containers-description.md  README.md
include/: ServiceA.h  ServiceB.h  depricated_di_container_impl.h  di_container.h  di_container_impl.h  root_class.h
rttr-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
rttr-build/doc/: Makefile  cmake_install.cmake
rttr-build/install/lib/: librttr_core.so.0.9.6
rttr-build/src/: Makefile  cmake_install.cmake
rttr-build/src/examples/: Makefile  cmake_install.cmake
rttr-build/src/examples/json_serialization/: Makefile  cmake_install.cmake
rttr-build/src/examples/library_loading/: Makefile  cmake_install.cmake
rttr-build/src/examples/library_loading/library_loader_example/: Makefile  cmake_install.cmake
rttr-build/src/examples/library_loading/plugin_example/: Makefile  cmake_install.cmake
rttr-build/src/rttr/: Makefile  cmake_install.cmake
rttr-build/src/unit_tests/: Makefile  cmake_install.cmake
rttr-build/src/unit_tests/plugin/: Makefile  cmake_install.cmake
samples/: field_registration_json_test.txt  instance_registration_json_test.txt
src/: di_container.cpp  main.cpp
test/: ServiceA.cpp  ServiceB.cpp  cyclic_dependencies_test.cpp  inheritance_test.cpp
test/include/: ServiceA.h  ServiceB.h
test/src/: ServiceA.cpp  ServiceB.cpp  cyclic_depencies_test.cpp  depricated_inheritance_test.cpp  derpicated_cyclic_dependencies_test.cpp  fields_registration_json_test.cpp  fields_registration_test.cpp  hello_test.cpp  inheritance_test.cpp  instance_registration_json_test.cpp  instance_registration_test.cpp  interface_registration_test.cpp  mixed_registration_test.cpp  scoped_test.cpp  singleton_test.cpp  transient_test.cpp
